finished themes section

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -40,6 +40,8 @@
   position: relative;
 }
 .shapes-container {
+  // border: 1px solid black;
+  margin-top: -8%;
   .shapes {
     .triangle {
       width: 500px;
