--- a/styles/_team.scss
+++ b/styles/_team.scss
@@ -1,11 +1,73 @@
 .Team--container {
-  border: 1px solid black;
+  //   border: 1px solid black;
+  position: relative;
   .images {
-    border: 2px solid red;
+    // border: 2px solid red;
     position: relative;
-    .team-img {
-      border: 1px solid black;
+    h3 {
+      //   border: 2px solid purple;
       position: absolute;
+      top: 500px;
+      left: 31%;
+
+      font-family: "Open Sans", sans-serif;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 48px;
+      line-height: 65px;
+      text-align: center;
+      letter-spacing: 0.255em;
+    }
+    .team-img {
+      //   border: 1px solid black;
+      position: absolute;
+      top: 40%;
+      border-radius: 50%;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        border-radius: 50%;
+        // border: 2px solid red;
+        margin: 0;
+      }
+    }
+    .team-img:nth-child(1) {
+      border: 5px solid #5296fc;
+      top: 500px;
+      left: 0;
+    }
+
+    .team-img:nth-child(2) {
+      border: 5px solid #a82282;
+      top: 200px;
+      left: 200px;
+    }
+    .team-img:nth-child(3) {
+      border: 5px solid #38af43;
+      top: 200px;
+      left: 500px;
+    }
+    .team-img:nth-child(4) {
+      border: 5px solid #ff912c;
+      top: 130px;
+      left: 800px;
+    }
+    .team-img:nth-child(5) {
+      border: 5px solid #7d52fc;
+      top: 350px;
+      left: 950px;
+    }
+    .team-img:nth-child(6) {
+      border: 5px solid #e46942;
+      top: 600px;
+      left: 800px;
+    }
+    .team-img:nth-child(7) {
+      border: 5px solid #eefc52;
+      top: 750px;
+      left: 300px;
     }
   }
 }
